# fes-studio

./: .gitignore  README.md  app.py  install_fes_studio.bat  install_fes_studio.command  install_fes_studio.sh  launch_fes_studio.bat  launch_fes_studio.command  launch_fes_studio.sh  pyproject.toml  repair_fes_studio_env.bat  repair_fes_studio_env.command  repair_fes_studio_env.sh  run_fes_cli.bat  run_fes_cli.command  run_fes_cli.sh
.github/workflows/: ci.yml
src/fes_studio/: __init__.py  analysis.py  cli.py  demo.py  export.py  i18n.py  importers.py  launcher.py  models.py  parser.py  paths.py  plotting.py
